Fix svg not showing on mobile

--- a/src/components/navbar/styles.module.css
+++ b/src/components/navbar/styles.module.css
@@ -22,6 +22,11 @@
 .logo{
     max-height: 30px;
     max-width: 30px;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(124deg) brightness(116%) contrast(116%);
+}
+
+.logo:hover{
+    filter: invert(43%) sepia(96%) saturate(3119%) hue-rotate(243deg) brightness(95%) contrast(113%);
 }
 
 
